# playingwithapis

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 1_Intro.ipynb  2_simple_example.ipynb  3_div_apis.ipynb  4_IIIF.ipynb  5_IIIF.ipynb  5_SPARQL_1.ipynb  6_SPARQL_1.ipynb  7_SPARQL_2.ipynb  8_SPARQL_3.ipynb  bluesky.ipynb
