[project]
name = "playingwithapis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "iiif-prezi>=0.3.0",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "rdflib>=7.1.4",
    "requests>=2.32.5",
    "sparqlwrapper>=2.0.0",
]
